--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -1,6 +1,7 @@
 .footer{
     background: #424047;
     padding: 40px 20px;
+    margin-top: 20px;
     &__topbar{
         display: flex;
         justify-content: space-between;
