--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -2,6 +2,13 @@
     background: #424047;
     padding: 40px 20px;
     margin-top: 20px;
+    &__img{
+        margin-top: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 80%;
+    }
     &__topbar{
         display: flex;
         justify-content: space-between;
