--- a/scss/block/_sectionCatalog.scss
+++ b/scss/block/_sectionCatalog.scss
@@ -20,6 +20,10 @@
         flex-wrap: wrap;
         & li{
             margin: 20px 30px;
+            & img{
+                display: flex;
+                width: 100%;
+            }
             & p{
                 font-family: 'Raleway';
                 font-style: normal;
