--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -2,6 +2,51 @@
     background: #424047;
     padding: 40px 20px;
     margin-top: 20px;
+
+    &__bottom{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 50px 20px;
+        margin-top: 60px;
+        border-top: 1px solid rgba(255, 255,255, 0.2);
+        & h4{
+            font-family: 'Raleway';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 16px;
+            font-feature-settings: 'pnum' on, 'lnum' on;
+            
+            color: #FFFFFF;
+        }
+        & span{
+            display: flex;
+            align-items: center;
+            & p{
+                            margin-right: 30px;
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 16px;
+
+            color: #FFFFFF;
+
+            opacity: 0.4;
+            }
+            & b{
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 16px;
+                text-decoration-line: underline;
+
+                color: #FFFFFF;
+            }
+        }
+    }
+
     &__img{
         margin-top: 20px;
         display: flex;
