--- a/scss/block/_navbar.scss
+++ b/scss/block/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar{
     padding: 20px 15px;
     border-bottom: 1px solid rgba(255, 255,255,0.1);
+    background-color: #424047;
     &__hero{
         & img{
             margin: 0 20px;
