--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -53,6 +53,9 @@
         align-items: center;
         justify-content: space-between;
         width: 80%;
+        & img{
+            cursor: pointer;
+        }
     }
     &__topbar{
         display: flex;
